--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,16 @@
     "test": "jest --verbose"
   },
   "dependencies": {
+    "argon2": "^0.41.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
